# atlas-a-holochain-community-mapping-tool

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dnas/tags/workdir/: dna.yaml
map-provider/: package-lock.json  package.json
map-provider/src/: map.svelte
tests/: package.json
tests/src/tags/communities/: community.test.ts
tests/src/tags/profiles/: profile.test.ts
tests/src/tags/tags/: all-tags.test.ts  tag-item.test.ts
ui/: package.json
ui/public/: global.css
ui/public/fonts/ishimura/: Documentation.txt
ui/src/: App.svelte
ui/src/api/: client.ts  constants.ts  index.ts
ui/src/api/profiles/: profiles.constants.ts
ui/src/api/tags/: tags.constants.ts  tags.types.ts
ui/src/client/: index.ts
ui/src/components/: Footer.svelte  GenericModal.svelte  Map.svelte  Modal.svelte  TopBar.svelte
ui/src/components/button/: Modal.svelte
ui/src/components/circle-button/: CircleButton.svelte
ui/src/components/circle-menu/: CircleMenu.svelte
ui/src/components/geosearch/: GeoSearch.svelte
ui/src/components/map/: Map.svelte  MapControls.svelte  map.constants.ts
ui/src/components/map_controls/: MapControls.svelte
ui/src/routes/communities/: CommunityDetail.svelte  CreateCommunity.svelte  EditCommunity.svelte
ui/src/routes/profiles/: CreateProfile.svelte  EditProfile.svelte  ProfileDetail.svelte  profiles.utils.ts  types.ts
ui/src/routes/tags/: AllTags.svelte  CreateTagItem.svelte  (+5 more)
ui/src/routes/tags-manager/: index.svelte
ui/src/store/: actions.ts  constants.ts  store.ts  types.ts
workdir/: happ.yaml  web-happ.yaml
(+44 files in other folders)
