[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
serde = "1"

[workspace.dependencies.tags]
path = "dnas/tags/zomes/coordinator/tags"

[workspace.dependencies.tags_integrity]
path = "dnas/tags/zomes/integrity/tags"
